--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,28 @@
             </intent-filter>
         </activity>
 
-        <provider
-            android:name="androidx.work.impl.WorkManagerInitializer"
-            android:authorities="mohalim.islamic.moazen.workmanager-init"
-            android:exported="false"
-            tools:node="remove" />
+        <service
+            android:name=".core.service.AzanService"
+            android:exported="true"
+            android:enabled="true"/>
+
+        <service
+            android:name=".core.service.AzanPlayer"
+            android:exported="true"
+            android:enabled="true"/>
+
+        <receiver
+            android:name=".core.AzanBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="mohalim.islamic.moazen.START" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+
     </application>
 
 </manifest>
