--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
     }
 
 
-    dataBinding {
-        enabled true
+    buildFeatures {
+        dataBinding true
     }
     compileOptions {
         sourceCompatibility = 1.8
@@ -28,7 +28,7 @@ android {
 
 }
 
-def lifecycle_version = "2.1.0"
+def lifecycle_version = "2.2.0"
 
 dependencies {
 
@@ -38,31 +38,31 @@ dependencies {
 
 
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:preference-v7:28.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "androidx.work:work-runtime:2.2.0"
+    implementation "androidx.work:work-runtime:2.4.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
-    implementation 'com.google.firebase:firebase-database:19.2.0'
+//    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+//    implementation 'com.google.firebase:firebase-database:19.5.0'
 
-    implementation 'com.google.dagger:dagger:2.24'
-    implementation 'com.google.dagger:dagger-android-support:2.24'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+    implementation 'com.google.dagger:dagger:2.25.4'
+    implementation 'com.google.dagger:dagger-android-support:2.25.4'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.4'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.4'
 
 
-    implementation "androidx.room:room-runtime:2.2.1"
-    annotationProcessor "androidx.room:room-compiler:2.2.1"
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 
 
 
