--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "mohalim.islamic.moazen"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,9 +33,6 @@ def lifecycle_version = "2.2.0"
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation project(':llttz')
-
 
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -68,4 +65,4 @@ dependencies {
 
 }
 
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
