--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('G:\\Projects\\Moazen2\\key.jks')
+            storePassword 'Mohalim654326'
+            keyAlias = 'mohalim'
+            keyPassword '654326987'
+        }
+    }
+
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "mohalim.islamic.moazen"
@@ -38,13 +48,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:preference-v7:28.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "androidx.work:work-runtime:2.4.0"
+    implementation "androidx.work:work-runtime:2.5.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
@@ -58,10 +68,10 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.4'
 
 
-    implementation "androidx.room:room-runtime:2.2.5"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.2.6"
+    annotationProcessor "androidx.room:room-compiler:2.2.6"
 
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 
 }
