--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
 
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "mohalim.islamic.moazen"
         minSdkVersion 19
@@ -46,8 +46,8 @@ dependencies {
 
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:preference-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
