--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        config {
-            storeFile file('G:\\Projects\\Moazen2\\key.jks')
-            storePassword 'Mohalim654326'
-            keyAlias = 'mohalim'
-            keyPassword '654326987'
-        }
-    }
 
-
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "mohalim.islamic.moazen"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 2
         versionName "1.02"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,6 +27,7 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    buildToolsVersion '30.0.3'
 
 }
 
