--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
 
     compileSdkVersion 30
     defaultConfig {
-        applicationId "mohalim.islamic.moazen"
+        applicationId "mohalim.islamic.alarm.alert.moazen"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 2
@@ -52,9 +52,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
 
-//    implementation 'com.google.firebase:firebase-analytics:17.6.0'
-//    implementation 'com.google.firebase:firebase-database:19.5.0'
-
     implementation 'com.google.dagger:dagger:2.25.4'
     implementation 'com.google.dagger:dagger-android-support:2.25.4'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.25.4'
@@ -69,5 +66,3 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
 }
-
-//apply plugin: 'com.google.gms.google-services'
